upgrade imports plus prune dead code